<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:padding="10dp">


        <LinearLayout
            android:id="@+id/item_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/image"/>

            <TextView
                android:id="@+id/item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="item"
                android:textColor="@color/bodyTitleTextColor"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_ordered_date"/>

                    <TextView
                        android:id="@+id/last_order_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2020-03-10"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/available_units_frm_agent"/>

                    <TextView
                        android:id="@+id/available_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"/>

                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_ordered_units"/>

                    <TextView
                        android:id="@+id/last_ordered_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/salePrice"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:hint="@string/selling_price_frm_agent"/>

                </LinearLayout>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <EditText
                    android:id="@+id/new_order_quantity"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_order_quantity"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/new_order_unit_price"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_order_unit_price"
                    android:inputType="number"/>

            </LinearLayout>

            <Button
                android:id="@+id/buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>




    </LinearLayout>

</FrameLayout>