<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_moderate">

    <LinearLayout
        android:id="@+id/catergory_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:background="@drawable/rounded_corner_blue_storke_square_second">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"></LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="9"
                    android:src="@drawable/ic_item_catergory"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"></LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/no_stock_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_stock_data"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/stock_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/stock_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Stock date"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/selling_price"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Selling price"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/available_units"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Available units"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/note"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Special note"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stock_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_stock_date_item_detail"/>


                <TextView
                    android:id="@+id/selected_stock"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/number_of_unit_item_detail"/>


            <EditText
                android:id="@+id/unit_count"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/selling_price_per_unit_item_deteails"/>


            <EditText
                android:id="@+id/selling_price_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/total_price_item_details"/>


            <EditText
                android:id="@+id/total_price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/sell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:text="Sell"/>


            <Button
                android:id="@+id/add_to_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="Add to cart"/>


        </LinearLayout>


    </LinearLayout>

</FrameLayout>